opam-version: "2.0"
authors: ["Arena Developers <silver-snakes@arena.io>"]
maintainer: "silver-snakes@arena.io"
homepage: "https://github.com/arenadotio/ocaml-mssql"
dev-repo: "git+https://github.com/arenadotio/ocaml-mssql.git"
bug-reports: "https://github.com/arenadotio/ocaml-mssql/issues"
doc: "https://arenadotio.github.io/ocaml-mssql/doc"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "async"
  "bignum"
  "ppx_jane"
  "freetds"
  "ocaml" {>= "4.06.1"}
  "ounit"
  "logs"
  "text" {>= "0.8.0"}

  "bisect_ppx" {build & >= "1.3.1"}
  "dune" {build & >= "1.4"}
]
