opam-version: "2.0"
authors: ["Arena Developers <silver-snakes@arena.io>"]
maintainer: "silver-snakes@arena.io"
homepage: "https://github.com/arenadotio/ocaml-mssql"
dev-repo: "git+https://github.com/arenadotio/ocaml-mssql.git"
bug-reports: "https://github.com/arenadotio/ocaml-mssql/issues"
doc: "https://arenadotio.github.io/ocaml-mssql/doc"
synopsis: "Async SQL Server client using FreeTDS"
description: "Mssql wraps FreeTDS in a nicer and safer interface, with support for parameterized queries, thread-based async IO, and a thread pool."

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "alcotest" {>= "1.0.1"}
  "alcotest-async" {>= "1.0.1"}
  "async"
  "bignum"
  "ppx_jane"
  "iter" {>= "1.2"}
  "ocaml" {>= "4.06.1"}
  "ounit"
  "logs"
  "text" {>= "0.8.0"}

  "bisect_ppx" {build & >= "2.0.0"}
  "dune" { >= "1.11"}
  "cppo"
]

depexts: [
  ["freetds-dev"] {os-distribution = "alpine"}
  ["freetds-dev"] {os-distribution = "debian"}
  ["freetds-dev"] {os-distribution = "ubuntu"}
  ["freetds-devel"] {os-distribution = "fedora"}
  ["freetds-devel"] {os-family = "opensuse"}
  ["freetds"] {os = "macos" & os-distribution = "homebrew"}
]
