(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "bisect_ppx"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|
(library
 (public_name mssql)
 (libraries core async freetds iter bignum logs oUnit text)
 (preprocess
  (pps ppx_jane |} ^ preprocess ^ {|)))

(ocamllex query_lexer)

(ocamlyacc query_parser)
|}
